# classic-container

./: README.md  setup.cfg
sources/classic/container/: __init__.py  builder.py  constants.py  container.py  context.py  exceptions.py  registrator.py  registry.py  resolver.py  rules.py  settings.py  types.py  utils.py
tests/: conftest.py  example.py  test_container.py  test_nested_resolve.py  test_settings.py
