[metadata]
name = classic-container
version = 0.2.0
description = Provides container with dependencies resolving
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic-container
project_urls =
    Bug Tracker = https://github.com/variasov/classic-container/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.10
package_dir =
    = sources


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=7.2
    pytest-cov~=4.0
    twine~=4.0
    build~=0.10
